<resources>
    <string name="app_name">任行约车司机端</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="gprs_condition">（提示：非WIFI环境）</string>
    <string name="update_title">发现新版本</string>
    <string name="update_now">立即更新</string>
    <string name="not_now">以后再说</string>
    <string name="title_activity_login">Sign in</string>

    <string name ="user_agreement">您在使用任行约车司机端产品或服务前,请认真阅读并充分理解相关用户条款、平台规则及隐私政策。当您点击同意相关条款，并开始使用产品或服务，即表示您已经理解并同意该条款，该条款将构成对您具有法律约束的文件。用户隐私政策主要包含以下内容：个人信息（包括手机号码、位置、行程信息等）的收集使用规则及设备权限的调用情况。权限调用目的说明：任行约车希望获取您的电话权限，用于获取设备信息，防范运营风险；存储权限，用于必要的信息配置存储；位置权限，用于定位和导航；麦克风权限，用于行程录音。您确认本弹窗并不会直接开启相关权限，我们会就具体权限开启另行征得您的同意。</string>

    <string name="warm_reminder">如您的账号是邮箱，请注意填写对应邮箱后缀</string>
    <string name="warm_reminder_1">如您的账号是支付宝默认账号（非手机号或邮箱格式），请尝试添加@alipay.tech后绑定</string>
    <string name="warm_reminder_2">请注意核对账号正确性，并保证账号已完成实名认证</string>
    <string name="warm_reminder_3">支付宝个人信息需与司机账号个人信息保持一致</string>
    <string name="warm_reminder_4">请确认开通单笔转账功能，您的所有提现金额将统一转入该账户</string>

    <string name="true_commitment">真实性承诺及法律责任说明：本人承诺所提供的全部信息真实、准确；本人同时知晓，如果因未能提供真实、准确信息，造成严重后果的，本人将承担相应的民事责任、行政责任，以及刑事责任。</string>
    <!-- login -->
    <string name="phone_txt">手机号</string>
    <string name="password_txt">验证码</string>
    <string name="car_team_txt">车 队</string>
    <string name="forget_password_txt">重置密码</string>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_car_team">请输入车队</string>
    <string name="btn_login">登 录</string>
    <string name="btn_register">新用户注册</string>

    <!-- forget -->
    <string name="vcode_txt">验证码</string>
    <string name="ok_txt">确 认</string>
    <string name="prompt_vcode">请输入验证码</string>
    <string name="new_password_txt">新密码</string>
    <string name="prompt_new_password">请输入新密码</string>
    <string name="password_again_txt">确认密码</string>
    <string name="prompt_password_again">请再次输入新密码</string>

    <!-- main -->
    <string name="online">上线接单</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="default_file_name">My_Recording</string>
    <string name="notification_setting_title">温馨提示</string>
    <string name="notification_setting_hint">检测到您的通知权限已关闭，暂无法接收通知消息，请前往开启</string>
    <string name="cancel">取消</string>
    <string name="go_set">去设置</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>

</resources>
